Fixed align-none display

--- a/styles/less/chimplate-base.less
+++ b/styles/less/chimplate-base.less
@@ -505,7 +505,7 @@ br.clear {
 		.block-center(@margin_default);
 	}
 
-	.alignnone { float: none; display: none; }
+	.alignnone { float: none; display: inline; }
 
 	@media (min-width: @breakpoint_tablet) {
 
